have begun implementing methods to handle fatal and max-recurring errors