@@ -30,7 +30,6 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.io.PrintWriter;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -59,7 +58,6 @@ import org.xml.sax.SAXParseException;
 
 /**
  * @author &lt;tsh@statsbiblioteket.dk&gt;
- * 
  */
 public class RadioTVMetadataProcessor implements HotFolderScannerClient {
 
@@ -81,6 +79,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
     private static final String META_FILE_TEMPLATE_PID = "doms:Template_Shard";
     private static final String META_FILE_METADATA_DS_ID = "SHARD_METADATA";
     private static final String RADIO_TV_FILE_TEMPLATE_PID = "doms:Template_RadioTVFile";
+    private static final int MAX_FAIL_COUNT = 3;
 
     private final File failedFilesFolder;
     private final File processedFilesFolder;
@@ -88,15 +87,17 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
     private final DOMSLoginInfo domsLoginInfo;
     private final XPathFactory xPathFactory;
 
-    public RadioTVMetadataProcessor(DOMSLoginInfo domsLoginInfo,
-	    File failedFilesFolder, File processedFilesFolder,
-	    Schema preIngestFileSchema) {
-	this.failedFilesFolder = failedFilesFolder;
-	this.processedFilesFolder = processedFilesFolder;
-	this.preIngestFileSchema = preIngestFileSchema;
-	this.domsLoginInfo = domsLoginInfo;
+    private int exceptionCount = 0;
 
-	xPathFactory = XPathFactory.newInstance();
+    public RadioTVMetadataProcessor(DOMSLoginInfo domsLoginInfo,
+                                    File failedFilesFolder, File processedFilesFolder,
+                                    Schema preIngestFileSchema) {
+        this.failedFilesFolder = failedFilesFolder;
+        this.processedFilesFolder = processedFilesFolder;
+        this.preIngestFileSchema = preIngestFileSchema;
+        this.domsLoginInfo = domsLoginInfo;
+
+        xPathFactory = XPathFactory.newInstance();
     }
 
     /* (non-Javadoc)
@@ -104,110 +105,124 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      */
     public void fileAdded(File addedFile) {
 
-	try {
-	    List<String> pidsToPublish = new ArrayList<String>();
-	    try {
-		final DocumentBuilderFactory documentBuilderFactory = DocumentBuilderFactory
-		        .newInstance();
+        try {
+            List<String> pidsToPublish = new ArrayList<String>();
+            try {
+                final DocumentBuilderFactory documentBuilderFactory = DocumentBuilderFactory
+                        .newInstance();
 
-		documentBuilderFactory.setSchema(preIngestFileSchema);
-		documentBuilderFactory.setNamespaceAware(true);
-		final DocumentBuilder documentBuilder = documentBuilderFactory
-		        .newDocumentBuilder();
+                documentBuilderFactory.setSchema(preIngestFileSchema);
+                documentBuilderFactory.setNamespaceAware(true);
+                final DocumentBuilder documentBuilder = documentBuilderFactory
+                        .newDocumentBuilder();
 
-		ErrorHandler documentErrorHandler = new org.xml.sax.ErrorHandler() {
+                ErrorHandler documentErrorHandler = new org.xml.sax.ErrorHandler() {
 
-		    @Override
-		    public void warning(SAXParseException exception)
-			    throws SAXException {
+                    @Override
+                    public void warning(SAXParseException exception)
+                            throws SAXException {
 
-			throw exception;
-		    }
+                        throw exception;
+                    }
 
-		    @Override
-		    public void fatalError(SAXParseException exception)
-			    throws SAXException {
+                    @Override
+                    public void fatalError(SAXParseException exception)
+                            throws SAXException {
 
-			throw exception;
-		    }
+                        throw exception;
+                    }
 
-		    @Override
-		    public void error(SAXParseException exception)
-			    throws SAXException {
-			throw exception;
-		    }
-		};
-		documentBuilder.setErrorHandler(documentErrorHandler);
-		final Document radioTVMetadata = documentBuilder
-		        .parse(addedFile);
+                    @Override
+                    public void error(SAXParseException exception)
+                            throws SAXException {
+                        throw exception;
+                    }
+                };
+                documentBuilder.setErrorHandler(documentErrorHandler);
+                final Document radioTVMetadata = documentBuilder
+                        .parse(addedFile);
 
-		final DOMSWSClient domsClient = new DOMSWSClient();
-		domsClient.login(domsLoginInfo.getDomsWSAPIUrl(), domsLoginInfo
-		        .getLogin(), domsLoginInfo.getPassword());
+                final DOMSWSClient domsClient = new DOMSWSClient();
+                domsClient.login(domsLoginInfo.getDomsWSAPIUrl(), domsLoginInfo
+                        .getLogin(), domsLoginInfo.getPassword());
 
-		final List<String> filePIDs = ingestFiles(domsClient,
-		        radioTVMetadata);
-		pidsToPublish.addAll(filePIDs);
+                final List<String> filePIDs = ingestFiles(domsClient,
+                        radioTVMetadata);
+                pidsToPublish.addAll(filePIDs);
 
-		final String metaFilePID = ingestMetaFile(domsClient,
-		        radioTVMetadata, filePIDs);
-		pidsToPublish.add(metaFilePID);
+                final String metaFilePID = ingestMetaFile(domsClient,
+                        radioTVMetadata, filePIDs);
+                pidsToPublish.add(metaFilePID);
 
-		final String programPID = ingestProgram(domsClient,
-		        radioTVMetadata, metaFilePID);
-		pidsToPublish.add(programPID);
+                final String programPID = ingestProgram(domsClient,
+                        radioTVMetadata, metaFilePID);
+                pidsToPublish.add(programPID);
 
-		domsClient.publishObjects(pidsToPublish);
+                domsClient.publishObjects(pidsToPublish);
 
-		// Move the processed file to the finished files folder.
-		moveFile(addedFile, processedFilesFolder);
+                // Move the processed file to the finished files folder.
+                moveFile(addedFile, processedFilesFolder);
 
-	    } catch (ParserConfigurationException pce) {
-		moveFile(addedFile, failedFilesFolder);
-		writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
-		pce.printStackTrace();
-		// TODO: Log this
-		// TODO: we should not allow endless failures....
-	    } catch (SAXException se) {
-		moveFile(addedFile, failedFilesFolder);
-		writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
-		se.printStackTrace();
-		// TODO: Log this
-		// TODO: we should not allow endless failures....
-	    } catch (ServerError se) {
-		// Failed calling the DOMS server
-		moveFile(addedFile, failedFilesFolder);
-		writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
-		se.printStackTrace();
-		// TODO: Log this
-		// TODO: we should not allow endless failures....
-	    } catch (XPathExpressionException xpee) {
-		// Failed parsing the Radio-TV XML document...
-		moveFile(addedFile, failedFilesFolder);
-		writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
-		xpee.printStackTrace();
-		// TODO: Log this
-		// TODO: we should not allow endless failures....
+            } catch (ParserConfigurationException pce) {
+                moveFile(addedFile, failedFilesFolder);
+                writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
+                pce.printStackTrace();
+                // TODO: Log this
+                // TODO: we should not allow endless failures....
+                // TODO: FATAL
+                fatalException();
 
-	    } catch (URISyntaxException use) {
-		// Failed parsing the Radio-TV XML document...
-		moveFile(addedFile, failedFilesFolder);
-		writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
-		use.printStackTrace();
-		// TODO: Log this
-		// TODO: we should not allow endless failures....
+                
+            } catch (SAXException se) {
+                moveFile(addedFile, failedFilesFolder);
+                writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
+                se.printStackTrace();
+                // TODO: Log this
+                // TODO: we should not allow endless failures....
+                // TODO: Wounded > many = FATAL
+                incrementFailedTries();
 
-	    } catch (IOException ioe) {
-		moveFile(addedFile, failedFilesFolder);
-		writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
-		ioe.printStackTrace();
-		// TODO: Log this
-		// TODO: we should not allow endless failures....
-	    }
-	} catch (FileNotFoundException fnfe) {
-	    // TODO: Log this.
-	    fnfe.printStackTrace();
-	}
+
+            } catch (ServerError se) {
+                // Failed calling the DOMS server
+                moveFile(addedFile, failedFilesFolder);
+                writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
+                se.printStackTrace();
+                // TODO: Log this
+                // TODO: FATAL, POSSIBLE RETIRES
+                // TODO: we should not allow endless failures....
+
+            } catch (XPathExpressionException xpee) {
+                // Failed parsing the Radio-TV XML document...
+                moveFile(addedFile, failedFilesFolder);
+                writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
+                xpee.printStackTrace();
+                // TODO: Log this
+                // TODO: we should not allow endless failures....
+                // TODO: should _NEVER_ happend, code is broken
+
+            } catch (URISyntaxException use) {
+                // Failed parsing the Radio-TV XML document...
+                moveFile(addedFile, failedFilesFolder);
+                writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
+                use.printStackTrace();
+                // TODO: Log this
+                // TODO: we should not allow endless failures....
+                //failure can be from fileIngest as a pre ibngest error
+                //or from ingestMetaFile as a config/code error
+
+            } catch (IOException ioe) {
+                moveFile(addedFile, failedFilesFolder);
+                writeFailedPIDs(addedFile, pidsToPublish, failedFilesFolder);
+                ioe.printStackTrace();
+                // TODO: Log this
+                // TODO: we should not allow endless failures....
+                // a code error for ingestMetaFile
+            }
+        } catch (FileNotFoundException fnfe) {
+            // TODO: Log this.
+            fnfe.printStackTrace();
+        }
 
     }
 
@@ -216,7 +231,7 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      */
 
     public void fileDeleted(File deletedFile) {
-	// Not relevant.
+        // Not relevant.
     }
 
     /* (non-Javadoc)
@@ -224,118 +239,112 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      */
 
     public void fileModified(File modifiedFile) {
-	// Not relevant.
+        // Not relevant.
     }
 
     /**
-     * 
-     * @param domsClient
-     *            A reference to the DOMS client instance to communicate with.
-     * @param radioTVMetadata
-     *            Bibliographical metadata about the program.
-     * @param metafilePID
-     *            PID to the metafile which represents the program data.
+     * @param domsClient      A reference to the DOMS client instance to communicate with.
+     * @param radioTVMetadata Bibliographical metadata about the program.
+     * @param metafilePID     PID to the metafile which represents the program data.
      * @return PID of the newly created program object, created by the DOMS.
-     * @throws ServerError
-     *             if creation or manipulation of the program object fails.
-     * @throws XPathExpressionException
-     *             if any errors were encountered while processing the
-     *             <code>radioTVMetadata</code> XML document.
+     * @throws ServerError              if creation or manipulation of the program object fails.
+     * @throws XPathExpressionException if any errors were encountered while processing the
+     *                                  <code>radioTVMetadata</code> XML document.
      */
     private String ingestProgram(DOMSWSClient domsClient,
-	    Document radioTVMetadata, String metafilePID) throws ServerError,
-	    XPathExpressionException {
+                                 Document radioTVMetadata, String metafilePID) throws ServerError,
+            XPathExpressionException {
 
-	final String programObjectPID = domsClient
-	        .createObjectFromTemplate(PROGRAM_TEMPLATE_PID);
+        final String programObjectPID = domsClient
+                .createObjectFromTemplate(PROGRAM_TEMPLATE_PID);
 
-	final Document pbCoredDataStreamDocument = domsClient.getDataStream(
-	        programObjectPID, PROGRAM_PBCORE_DS_ID);
-	final Node pbCoreDataStreamElement = pbCoredDataStreamDocument
-	        .getFirstChild();
+        final Document pbCoredDataStreamDocument = domsClient.getDataStream(
+                programObjectPID, PROGRAM_PBCORE_DS_ID);
+        final Node pbCoreDataStreamElement = pbCoredDataStreamDocument
+                .getFirstChild();
 
-	final XPath xPath = this.xPathFactory.newXPath();
-	// FIXME! Remove uglyness!
-	NamespaceContext pbcoreNamespace = new NamespaceContext() {
+        final XPath xPath = this.xPathFactory.newXPath();
+        // FIXME! Remove uglyness!
+        NamespaceContext pbcoreNamespace = new NamespaceContext() {
 
-	    private final String namespaceURI = "http://www.pbcore.org/PBCore/PBCoreNamespace.html";
-	    private final String prefix = "pbc";
+            private final String namespaceURI = "http://www.pbcore.org/PBCore/PBCoreNamespace.html";
+            private final String prefix = "pbc";
 
-	    @Override
-	    public Iterator getPrefixes(String namespaceURI) {
-		List<String> prefixes = new ArrayList<String>();
-		prefixes.add(prefix);
-		return prefixes.iterator();
-	    }
+            @Override
+            public Iterator getPrefixes(String namespaceURI) {
+                List<String> prefixes = new ArrayList<String>();
+                prefixes.add(prefix);
+                return prefixes.iterator();
+            }
 
-	    @Override
-	    public String getPrefix(String namespaceURI) {
-		if (this.namespaceURI.equals(namespaceURI)) {
-		    return prefix;
-		} else {
-		    return null;
-		}
-	    }
+            @Override
+            public String getPrefix(String namespaceURI) {
+                if (this.namespaceURI.equals(namespaceURI)) {
+                    return prefix;
+                } else {
+                    return null;
+                }
+            }
 
-	    @Override
-	    public String getNamespaceURI(String prefix) {
-		if (this.prefix.equals(prefix)) {
-		    return namespaceURI;
-		} else {
-		    return null;
-		}
-	    }
-	};
-	xPath.setNamespaceContext(pbcoreNamespace);
-	final Node radioTVPBCoreElement = (Node) xPath.evaluate(
-	        RECORDING_PBCORE_DESCRIPTION_DOCUMENT_ELEMENT, radioTVMetadata,
-	        XPathConstants.NODE);
+            @Override
+            public String getNamespaceURI(String prefix) {
+                if (this.prefix.equals(prefix)) {
+                    return namespaceURI;
+                } else {
+                    return null;
+                }
+            }
+        };
+        xPath.setNamespaceContext(pbcoreNamespace);
+        final Node radioTVPBCoreElement = (Node) xPath.evaluate(
+                RECORDING_PBCORE_DESCRIPTION_DOCUMENT_ELEMENT, radioTVMetadata,
+                XPathConstants.NODE);
 
-	final Node newPBCoreElement = pbCoredDataStreamDocument.importNode(
-	        radioTVPBCoreElement, true);
+        final Node newPBCoreElement = pbCoredDataStreamDocument.importNode(
+                radioTVPBCoreElement, true);
 
-	// Replace the PBCore metadata template with the real data.
-	pbCoredDataStreamDocument.replaceChild(newPBCoreElement,
-	        pbCoreDataStreamElement);
+        // Replace the PBCore metadata template with the real data.
+        pbCoredDataStreamDocument.replaceChild(newPBCoreElement,
+                pbCoreDataStreamElement);
 
-	domsClient.updateDataStream(programObjectPID, PROGRAM_PBCORE_DS_ID,
-	        pbCoredDataStreamDocument);
+        domsClient.updateDataStream(programObjectPID, PROGRAM_PBCORE_DS_ID,
+                pbCoredDataStreamDocument);
 
-	// Add the Ritzau metadata
-	final Node ritzauPreingestElement = (Node) xPath.evaluate(
-	        RITZAU_ORIGINALS_ELEMENT, radioTVMetadata, XPathConstants.NODE);
+        // Add the Ritzau metadata
+        final Node ritzauPreingestElement = (Node) xPath.evaluate(
+                RITZAU_ORIGINALS_ELEMENT, radioTVMetadata, XPathConstants.NODE);
 
-	final Document ritzauOriginalDocument = domsClient.getDataStream(
-	        programObjectPID, RITZAU_ORIGINAL_DS_ID);
+        final Document ritzauOriginalDocument = domsClient.getDataStream(
+                programObjectPID, RITZAU_ORIGINAL_DS_ID);
 
-	final Node ritzauOriginalElement = ritzauOriginalDocument
-	        .getFirstChild();
-	ritzauOriginalElement.setTextContent(ritzauPreingestElement
-	        .getTextContent());
+        final Node ritzauOriginalElement = ritzauOriginalDocument
+                .getFirstChild();
+        ritzauOriginalElement.setTextContent(ritzauPreingestElement
+                .getTextContent());
 
-	domsClient.updateDataStream(programObjectPID, RITZAU_ORIGINAL_DS_ID,
-	        ritzauOriginalDocument);
+        domsClient.updateDataStream(programObjectPID, RITZAU_ORIGINAL_DS_ID,
+                ritzauOriginalDocument);
 
-	// Add the Gallup metadata
-	final Node gallupPreingestElement = (Node) xPath.evaluate(
-	        GALLUP_ORIGINALS_ELEMENT, radioTVMetadata, XPathConstants.NODE);
+        // Add the Gallup metadata
+        final Node gallupPreingestElement = (Node) xPath.evaluate(
+                GALLUP_ORIGINALS_ELEMENT, radioTVMetadata, XPathConstants.NODE);
 
-	final Document gallupOriginalDocument = domsClient.getDataStream(
-	        programObjectPID, GALLUP_ORIGINAL_DS_ID);
+        final Document gallupOriginalDocument = domsClient.getDataStream(
+                programObjectPID, GALLUP_ORIGINAL_DS_ID);
 
-	final Node gallupOriginalElement = gallupOriginalDocument
-	        .getFirstChild();
-	gallupOriginalElement.setTextContent(gallupPreingestElement
-	        .getTextContent());
+        final Node gallupOriginalElement = gallupOriginalDocument
+                .getFirstChild();
+        gallupOriginalElement.setTextContent(gallupPreingestElement
+                .getTextContent());
 
-	domsClient.updateDataStream(programObjectPID, GALLUP_ORIGINAL_DS_ID,
-	        gallupOriginalDocument);
+        domsClient.updateDataStream(programObjectPID, GALLUP_ORIGINAL_DS_ID,
+                gallupOriginalDocument);
 
-	// Create relations to the metafile/shard
-	domsClient.addObjectRelation(programObjectPID,
-	        HAS_METAFILE_RELATION_TYPE, metafilePID);
+        // Create relations to the metafile/shard
+        domsClient.addObjectRelation(programObjectPID,
+                HAS_METAFILE_RELATION_TYPE, metafilePID);
 
-	return programObjectPID;
+        return programObjectPID;
     }
 
     /**
@@ -346,206 +355,221 @@ public class RadioTVMetadataProcessor implements HotFolderScannerClient {
      * <code>radioTVMetadata</code> contains, among other things, information
      * about location and duration of the chunks of data from the physical files
      * which constitutes the contents of the metafile.
-     * 
+     * <p/>
      * TODO: Consider cleaning up/consolidating the exceptions
-     * 
-     * @param domsClient
-     *            A reference to the DOMS client instance to communicate with.
-     * @param radioTVMetadata
-     *            Metadata about location and duration of the relevant data
-     *            chunks from the physical files.
-     * @param filePIDs
-     *            List of PIDs for the physical files containing the data
-     *            represented by this metafile.
+     *
+     * @param domsClient      A reference to the DOMS client instance to communicate with.
+     * @param radioTVMetadata Metadata about location and duration of the relevant data
+     *                        chunks from the physical files.
+     * @param filePIDs        List of PIDs for the physical files containing the data
+     *                        represented by this metafile.
      * @return PID of the newly created metafile object, created by the DOMS.
-     * @throws ServerError
-     *             if creation or manipulation of the metafile object fails.
+     * @throws ServerError                  if creation or manipulation of the metafile object fails.
      * @throws IOException
      * @throws SAXException
      * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     *             if any errors were encountered while processing the
-     *             <code>radioTVMetadata</code> XML document.
+     * @throws XPathExpressionException     if any errors were encountered while processing the
+     *                                      <code>radioTVMetadata</code> XML document.
      * @throws URISyntaxException
      */
     private String ingestMetaFile(DOMSWSClient domsClient,
-	    Document radioTVMetadata, List<String> filePIDs)
-	    throws ServerError, IOException, SAXException,
-	    ParserConfigurationException, XPathExpressionException,
-	    URISyntaxException {
+                                  Document radioTVMetadata, List<String> filePIDs)
+            throws ServerError, IOException, SAXException,
+            ParserConfigurationException, XPathExpressionException,
+            URISyntaxException {
 
-	final Date now = new Date();
-	final FileInfo fileInfo = new FileInfo("I_made_this_up/"
-	        + now.getTime(), new URL("http://localhost/I_made_this_up/"
-	        + now.getTime()), "", new URI("info:pronom/fmt/199"));
-	final String metaFilePID = domsClient.createFileObject(
-	        META_FILE_TEMPLATE_PID, fileInfo);
+        final Date now = new Date();
+        final FileInfo fileInfo = new FileInfo("I_made_this_up/"
+                + now.getTime(), new URL("http://localhost/I_made_this_up/"
+                + now.getTime()), "", new URI("info:pronom/fmt/199"));
+        final String metaFilePID = domsClient.createFileObject(
+                META_FILE_TEMPLATE_PID, fileInfo);
 
-	final Document metadataDataStreamDocument = domsClient.getDataStream(
-	        metaFilePID, META_FILE_METADATA_DS_ID);
-	final Node metadataDataStreamElement = metadataDataStreamDocument
-	        .getFirstChild();
+        final Document metadataDataStreamDocument = domsClient.getDataStream(
+                metaFilePID, META_FILE_METADATA_DS_ID);
+        final Node metadataDataStreamElement = metadataDataStreamDocument
+                .getFirstChild();
 
-	final NodeList children = metadataDataStreamElement.getChildNodes();
-	if (children.getLength() != 1) {
-	    throw new SAXException("Expected only one XML element in the "
-		    + "metadata datastream (ID: " + META_FILE_METADATA_DS_ID
-		    + ") of the template object (PID: "
-		    + META_FILE_TEMPLATE_PID + "). Found "
-		    + children.getLength() + " elements.");
-	}
+        final NodeList children = metadataDataStreamElement.getChildNodes();
+        if (children.getLength() != 1) {
+            throw new SAXException("Expected only one XML element in the "
+                    + "metadata datastream (ID: " + META_FILE_METADATA_DS_ID
+                    + ") of the template object (PID: "
+                    + META_FILE_TEMPLATE_PID + "). Found "
+                    + children.getLength() + " elements.");
+        }
 
-	// Remove the "INSERT" comment/instruction from the template
-	metadataDataStreamElement.removeChild(metadataDataStreamElement
-	        .getFirstChild());
+        // Remove the "INSERT" comment/instruction from the template
+        metadataDataStreamElement.removeChild(metadataDataStreamElement
+                .getFirstChild());
 
-	// Add all the "file" elements from the radio-tv metadata document.
-	// TODO: Note that this is just a first-shot implementation until a
-	// proper metadata format has been defined.
-	final XPath xPath = this.xPathFactory.newXPath();
-	final NodeList recordingFileElements = (NodeList) xPath.evaluate(
-	        RECORDING_FILES_FILE_ELEMENT, radioTVMetadata,
-	        XPathConstants.NODESET);
+        // Add all the "file" elements from the radio-tv metadata document.
+        // TODO: Note that this is just a first-shot implementation until a
+        // proper metadata format has been defined.
+        final XPath xPath = this.xPathFactory.newXPath();
+        final NodeList recordingFileElements = (NodeList) xPath.evaluate(
+                RECORDING_FILES_FILE_ELEMENT, radioTVMetadata,
+                XPathConstants.NODESET);
 
-	for (int fileElementIdx = 0; fileElementIdx < recordingFileElements
-	        .getLength(); fileElementIdx++) {
-	    final Node currentRecordingFile = recordingFileElements
-		    .item(fileElementIdx);
-	    final Node newMetadataElement = metadataDataStreamDocument
-		    .importNode(currentRecordingFile, true);
+        for (int fileElementIdx = 0; fileElementIdx < recordingFileElements
+                .getLength(); fileElementIdx++) {
+            final Node currentRecordingFile = recordingFileElements
+                    .item(fileElementIdx);
+            final Node newMetadataElement = metadataDataStreamDocument
+                    .importNode(currentRecordingFile, true);
 
-	    // Append to the end of the list of child nodes.
-	    metadataDataStreamElement.insertBefore(newMetadataElement, null);
-	}
+            // Append to the end of the list of child nodes.
+            metadataDataStreamElement.insertBefore(newMetadataElement, null);
+        }
 
-	domsClient.updateDataStream(metaFilePID, META_FILE_METADATA_DS_ID,
-	        metadataDataStreamDocument);
+        domsClient.updateDataStream(metaFilePID, META_FILE_METADATA_DS_ID,
+                metadataDataStreamDocument);
 
-	// Create relations to the relevant file(s)
-	for (String filePID : filePIDs) {
-	    domsClient.addObjectRelation(metaFilePID,
-		    CONSISTS_OF_RELATION_TYPE, filePID);
-	}
+        // Create relations to the relevant file(s)
+        for (String filePID : filePIDs) {
+            domsClient.addObjectRelation(metaFilePID,
+                    CONSISTS_OF_RELATION_TYPE, filePID);
+        }
 
-	return metaFilePID;
+        return metaFilePID;
     }
 
     /**
      * Ingest any missing file objects into the DOMS and return a list of PIDs
      * for all the DOMS file objects corresponding to the files listed in the
      * <code>radioTVMetadata</code> document.
-     * 
-     * @param domsClient
-     *            Reference to the DOMS client to communicate through.
-     * @param radioTVMetadata
-     *            Metadata XML document containing the file information.
+     *
+     * @param domsClient      Reference to the DOMS client to communicate through.
+     * @param radioTVMetadata Metadata XML document containing the file information.
      * @return A <code>List</code> of PIDs of the radio-tv file objects created
      *         by the DOMS.
-     * @throws XPathExpressionException
-     *             if any errors were encountered while processing the
-     *             <code>radioTVMetadata</code> XML document.
-     * @throws MalformedURLException
-     *             if a file element contains an invalid URL.
-     * @throws ServerError
-     *             if creation and retrieval of a radio-tv file object fails.
-     * @throws IOException
-     *             if a file specified in the <code>radioTVMetadata</code>
-     *             document could not be read for checksum calculation.
-     * @throws URISyntaxException
-     *             if the format URI for the file is invalid.
+     * @throws XPathExpressionException if any errors were encountered while processing the
+     *                                  <code>radioTVMetadata</code> XML document.
+     * @throws MalformedURLException    if a file element contains an invalid URL.
+     * @throws ServerError              if creation and retrieval of a radio-tv file object fails.
+     * @throws URISyntaxException       if the format URI for the file is invalid.
      */
     private List<String> ingestFiles(DOMSWSClient domsClient,
-	    Document radioTVMetadata) throws XPathExpressionException,
-	    MalformedURLException, ServerError, IOException, URISyntaxException {
+                                     Document radioTVMetadata) throws XPathExpressionException,
+            MalformedURLException, ServerError, URISyntaxException {
 
-	// Get the recording files XML element and process the file information.
-	final XPath xPath = this.xPathFactory.newXPath();
-	final NodeList recordingFiles = (NodeList) xPath.evaluate(
-	        RECORDING_FILES_FILE_ELEMENT, radioTVMetadata,
-	        XPathConstants.NODESET);
+        // Get the recording files XML element and process the file information.
+        final XPath xPath = this.xPathFactory.newXPath();
+        final NodeList recordingFiles = (NodeList) xPath.evaluate(
+                RECORDING_FILES_FILE_ELEMENT, radioTVMetadata,
+                XPathConstants.NODESET);
 
-	// Ensure that the DOMS contains a file object for each recording file
-	// element in the radio-tv XML document.
-	final List<String> fileObjectPIDs = new ArrayList<String>();
-	for (int nodeIndex = 0; nodeIndex < recordingFiles.getLength(); nodeIndex++) {
+        // Ensure that the DOMS contains a file object for each recording file
+        // element in the radio-tv XML document.
+        final List<String> fileObjectPIDs = new ArrayList<String>();
+        for (int nodeIndex = 0; nodeIndex < recordingFiles.getLength(); nodeIndex++) {
 
-	    final Node currentFileNode = recordingFiles.item(nodeIndex);
+            final Node currentFileNode = recordingFiles.item(nodeIndex);
 
-	    final Node fileURLNode = (Node) xPath.evaluate(FILE_URL_ELEMENT,
-		    currentFileNode, XPathConstants.NODE);
-	    final String fileURLString = fileURLNode.getTextContent();
-	    final URL fileURL = new URL(fileURLString);
+            final Node fileURLNode = (Node) xPath.evaluate(FILE_URL_ELEMENT,
+                    currentFileNode, XPathConstants.NODE);
+            final String fileURLString = fileURLNode.getTextContent();
+            final URL fileURL = new URL(fileURLString);
 
-	    String fileObjectPID;
-	    try {
-		fileObjectPID = domsClient.getFileObjectPID(fileURL);
-	    } catch (NoObjectFound nof) {
-		// The DOMS contains no file object for this file URL.
-		// Create a new one now.
-		final Node fileNameNode = (Node) xPath
-		        .evaluate(FILE_NAME_ELEMENT, currentFileNode,
-		                XPathConstants.NODE);
+            String fileObjectPID;
+            try {
+                fileObjectPID = domsClient.getFileObjectPID(fileURL);
+            } catch (NoObjectFound nof) {
+                // The DOMS contains no file object for this file URL.
+                // Create a new one now.
+                final Node fileNameNode = (Node) xPath
+                        .evaluate(FILE_NAME_ELEMENT, currentFileNode,
+                                XPathConstants.NODE);
 
-		final String fileName = fileNameNode.getTextContent();
+                final String fileName = fileNameNode.getTextContent();
 
-		final Node formatURINode = (Node) xPath.evaluate(
-		        FORMAT_URI_ELEMENT, currentFileNode,
-		        XPathConstants.NODE);
+                final Node formatURINode = (Node) xPath.evaluate(
+                        FORMAT_URI_ELEMENT, currentFileNode,
+                        XPathConstants.NODE);
 
-		final URI formatURI = new URI(formatURINode.getTextContent());
+                final URI formatURI = new URI(formatURINode.getTextContent());
 
-		final Node md5SumNode = (Node) xPath.evaluate(MD5_SUM_ELEMENT,
-		        currentFileNode, XPathConstants.NODE);
+                final Node md5SumNode = (Node) xPath.evaluate(MD5_SUM_ELEMENT,
+                        currentFileNode, XPathConstants.NODE);
 
-		// The MD5 check sum is optional. Just leave it empty if the
-		// pre-ingest file does not provide it.
-		String md5String = "";
-		if (md5SumNode != null) {
-		    md5String = md5SumNode.getTextContent();
-		}
+                // The MD5 check sum is optional. Just leave it empty if the
+                // pre-ingest file does not provide it.
+                String md5String = "";
+                if (md5SumNode != null) {
+                    md5String = md5SumNode.getTextContent();
+                }
 
-		final FileInfo fileInfo = new FileInfo(fileName, fileURL,
-		        md5String, formatURI);
+                final FileInfo fileInfo = new FileInfo(fileName, fileURL,
+                        md5String, formatURI);
 
-		fileObjectPID = domsClient.createFileObject(
-		        RADIO_TV_FILE_TEMPLATE_PID, fileInfo);
-	    }
-	    fileObjectPIDs.add(fileObjectPID);
-	}
-	return fileObjectPIDs;
+                fileObjectPID = domsClient.createFileObject(
+                        RADIO_TV_FILE_TEMPLATE_PID, fileInfo);
+            }
+            fileObjectPIDs.add(fileObjectPID);
+        }
+        return fileObjectPIDs;
     }
 
     /**
      * Move <code>fileToMove</code> to the folder specified by
      * <code>destinationFolder</code>.
-     * 
-     * @param fileToMove
-     *            Path to the file to move to <code>destinationFolder</code>.
-     * @param destinationFolder
-     *            Path of the destination folder to move the file to.
+     *
+     * @param fileToMove        Path to the file to move to <code>destinationFolder</code>.
+     * @param destinationFolder Path of the destination folder to move the file to.
      */
     private void moveFile(File fileToMove, File destinationFolder) {
-	fileToMove.renameTo(new File(destinationFolder.getAbsolutePath()
-	        + File.separator + fileToMove.getName()));
+        fileToMove.renameTo(new File(destinationFolder.getAbsolutePath()
+                + File.separator + fileToMove.getName()));
     }
 
     private void writeFailedPIDs(File failedMetadataFile,
-	    List<String> failedPIDs, File outputFolder)
-	    throws FileNotFoundException {
+                                 List<String> failedPIDs, File outputFolder)
+            throws FileNotFoundException {
 
-	final File failedPIDsFile = new File(outputFolder, failedMetadataFile
-	        .getName()
-	        + ".failedPIDs");
-	final PrintStream printStream = new PrintStream(failedPIDsFile);
+        final File failedPIDsFile = new File(outputFolder, failedMetadataFile
+                .getName()
+                + ".failedPIDs");
+        final PrintStream printStream = new PrintStream(failedPIDsFile);
 
-	final Iterator<String> pidIterator = failedPIDs.iterator();
-	while (pidIterator.hasNext()) {
-	    printStream.print(pidIterator.next());
-	    if (pidIterator.hasNext()) {
-		printStream.print(", ");
-	    }
-	}
-	printStream.println();
-	printStream.close();
+        final Iterator<String> pidIterator = failedPIDs.iterator();
+        while (pidIterator.hasNext()) {
+            printStream.print(pidIterator.next());
+            if (pidIterator.hasNext()) {
+                printStream.print(", ");
+            }
+        }
+        printStream.println();
+        printStream.close();
     }
+
+
+    /**
+     * ends all attempts to ingest from the current list of file descriptions
+     * in the pre-ingest file
+     * Voilent exit needed "system.exit()
+     */
+    private void fatalException() {
+        System.exit(-1);
+        //To change body of created methods use File | Settings | File Templates.
+    }
+
+    /**
+     * The number of tires is counted up.
+     * @param incrementBy a number of tries
+     */
+    private void increaseFailedTries(int incrementBy) {
+        exceptionCount += i;
+        if (exceptionCount >= MAX_FAIL_COUNT){
+            fatalException();
+        }
+    }
+
+    /**
+     * The number of tries is incremented by one
+     */
+    private void incrementFailedTries(){
+        increaseFailedTries(1);
+    }
+
+
 }
